:bug: force text wrapping for long headings

--- a/src/Components/ContentPage/ContentPage.css
+++ b/src/Components/ContentPage/ContentPage.css
@@ -7,6 +7,13 @@
   font-family: var(--font-primary);
   font-size: var(--size-h);
   line-height: 0.8;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
 
 .ContentPage .subheading {
